--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
+    "react-js-pagination": "^3.0.2",
     "react-moment": "^0.9.6",
     "react-scripts": "3.2.0",
     "react-select": "^3.0.8",
