--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "dependencies": {
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
+    "firebase": "^7.4.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
+    "pace": "0.0.4",
+    "pace-js": "^1.0.2",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-js-pagination": "^3.0.2",
     "react-moment": "^0.9.6",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-select": "^3.0.8",
     "react-uuid": "^1.0.2",
+    "react-with-firebase-auth": "^1.1.0",
     "reactstrap": "^8.1.1",
+    "recompose": "^0.30.0",
     "styled-components": "^4.4.0",
     "uuid": "^3.3.3"
   },
